Added banner ,menu, office and scholl ,catalog

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                   </button>
                 </form>
               </li>
-              <li class="nav-item dropdown">
+              <li class="nav-item dropdown mt-2 mt-lg-0">
                 <a
                   class="nav-link dropdown-toggle"
                   href="#"
@@ -94,6 +94,203 @@
       </nav>
     </header>
     <!-- Navbar  Ends -->
+
+    <!-- Category  -->
+    <div class="container pt-2">
+      <div class="row">
+        <div class="col-12 d-flex align-items-center justify-content-around">
+          <button class="category-btn">
+            <img src="./Images/menu.png" class="me-2" alt="" /> Category
+            <img src="./Images/downArrow.png" class="ms-2" alt="" />
+          </button>
+          <ul class="d-flex gap-3 gap-lg-5 category-list">
+            <li>HOME</li>
+            <li>NOVELTY</li>
+            <li>CHNCELLERY</li>
+            <li>DISCOUNT</li>
+          </ul>
+          <h2 class="contact">
+            <img src="./Images/contact.png" /> +73 7278 72 1123 <br /><span
+              class="customer-service"
+              >Customer service</span
+            >
+          </h2>
+        </div>
+      </div>
+    </div>
+    <hr />
+    <!-- Category Ends -->
+
+    <!-- Banner  -->
+    <div class="container">
+      <div class="row">
+        <div class="col-12 hero-sec">
+          <h1 class="clerical">Clerical GOODS</h1>
+          <p class="hurry-up">hurry up</p>
+          <button class="read-more">Read More</button>
+        </div>
+      </div>
+    </div>
+    <!-- Banner  Ends -->
+
+    <!-- Menu -->
+    <div class="container mt-4">
+      <div class="row mx-auto">
+        <div class="col-12 mx-auto">
+          <div class="card-menu">
+            <h1 class="my-4">Menu</h1>
+            <div class="card-images">
+              <img
+                src="./Images/menu1.png"
+                class="img-fluid me-3"
+                alt="Image 1"
+              />
+              <img
+                src="./Images/menu2.png"
+                class="img-fluid me-3"
+                alt="Image 2"
+              />
+              <img
+                src="./Images/menu3.png"
+                class="img-fluid me-3"
+                alt="Image 3"
+              />
+              <img
+                src="./Images/menu4.png"
+                class="img-fluid me-3"
+                alt="Image 4"
+              />
+              <img
+                src="./Images/menu5.png"
+                class="img-fluid me-3"
+                alt="Image 5"
+              />
+              <img
+                src="./Images/menu6.png"
+                class="img-fluid me-3"
+                alt="Image 6"
+              />
+              <img
+                src="./Images/menu7.png"
+                class="img-fluid me-3"
+                alt="Image 7"
+              />
+              <img
+                src="./Images/menu8.png"
+                class="img-fluid me-3"
+                alt="Image 8"
+              />
+              <img
+                src="./Images/menu9.png"
+                class="img-fluid me-3"
+                alt="Image 9"
+              />
+              <img
+                src="./Images/menu10.png"
+                class="img-fluid me-3"
+                alt="Image 10"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Menu Ends -->
+
+    <!-- Office and School  -->
+    <div class="container">
+      <div class="row mx-auto">
+        <div class="col-lg-6 office mt-4 me-4 me-lg-5">
+          <div>
+            <button class="office-btn">OFFICE</button>
+          </div>
+          <div>
+            <button class="shop-now-btn">
+              Shop now <img src="./Images/arrow-right.png" alt="" />
+            </button>
+          </div>
+        </div>
+        <div class="col-lg-6 school mt-4">
+          <div>
+            <button class="office-btn">SCHOOL</button>
+          </div>
+          <div>
+            <button class="shop-now-btn">
+              Shop now <img src="./Images/arrow-right.png" alt="" />
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Office and School Ends -->
+
+    <!-- Catalog  -->
+    <div class="container my-4 my-lg-5 catalog">
+      <div class="row">
+        <div class="col-6 col-md-2 me-lg-4 me-0">
+          <div class="card">
+            <img src="./Images/catalog1.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title p-0">Clerical GOODS</h5>
+              <p class="card-text p-0">10.00$</p>
+              <button class="add-btn text-center">
+                <img src="./Images/cart.png" class="me-3" alt="" /> Add
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 col-md-2 me-lg-4 me-0">
+          <div class="card">
+            <img src="./Images/catalog1.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title p-0">Clerical GOODS</h5>
+              <p class="card-text p-0">10.00$</p>
+              <button class="add-btn text-center">
+                <img src="./Images/cart.png" class="me-3" alt="" /> Add
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 col-md-2 me-lg-4 me-0">
+          <div class="card">
+            <img src="./Images/catalog1.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title p-0">Clerical GOODS</h5>
+              <p class="card-text p-0">10.00$</p>
+              <button class="add-btn text-center">
+                <img src="./Images/cart.png" class="me-3" alt="" /> Add
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 col-md-2 me-lg-4 me-0">
+          <div class="card">
+            <img src="./Images/catalog1.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title p-0">Clerical GOODS</h5>
+              <p class="card-text p-0">10.00$</p>
+              <button class="add-btn text-center">
+                <img src="./Images/cart.png" class="me-3" alt="" /> Add
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 col-md-2 me-lg-4 me-0">
+          <div class="card">
+            <img src="./Images/catalog1.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title p-0">Clerical GOODS</h5>
+              <p class="card-text p-0">10.00$</p>
+              <button class="add-btn text-center">
+                <img src="./Images/cart.png" class="me-3" alt="" /> Add
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Catalog Ends -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
