--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="responsive.css" />
+    <link rel="stylesheet" href="./CSS/index.css" />
+    <link rel="stylesheet" href="./CSS/index_responsive.css" />
   </head>
   <body>
     <!-- Navbar  -->
@@ -227,6 +227,7 @@
     <!-- Catalog  -->
     <div class="container my-4 my-lg-5 catalog">
       <div class="row">
+        <h1>CATALOG</h1>
         <div class="col-6 col-md-2 me-lg-4 me-0">
           <div class="card">
             <img src="./Images/catalog1.png" class="card-img-top" alt="..." />
@@ -241,7 +242,7 @@
         </div>
         <div class="col-6 col-md-2 me-lg-4 me-0">
           <div class="card">
-            <img src="./Images/catalog1.png" class="card-img-top" alt="..." />
+            <img src="./Images/catalog2.png" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title p-0">Clerical GOODS</h5>
               <p class="card-text p-0">10.00$</p>
@@ -253,7 +254,7 @@
         </div>
         <div class="col-6 col-md-2 me-lg-4 me-0">
           <div class="card">
-            <img src="./Images/catalog1.png" class="card-img-top" alt="..." />
+            <img src="./Images/catalog2.png" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title p-0">Clerical GOODS</h5>
               <p class="card-text p-0">10.00$</p>
@@ -265,7 +266,7 @@
         </div>
         <div class="col-6 col-md-2 me-lg-4 me-0">
           <div class="card">
-            <img src="./Images/catalog1.png" class="card-img-top" alt="..." />
+            <img src="./Images/catalog2.png" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title p-0">Clerical GOODS</h5>
               <p class="card-text p-0">10.00$</p>
@@ -277,7 +278,115 @@
         </div>
         <div class="col-6 col-md-2 me-lg-4 me-0">
           <div class="card">
-            <img src="./Images/catalog1.png" class="card-img-top" alt="..." />
+            <img src="./Images/catalog2.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title p-0">Clerical GOODS</h5>
+              <p class="card-text p-0">10.00$</p>
+              <button class="add-btn text-center">
+                <img src="./Images/cart.png" class="me-3" alt="" /> Add
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 col-md-2 me-lg-4 me-0">
+          <div class="card">
+            <img src="./Images/catalog3.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title p-0">Clerical GOODS</h5>
+              <p class="card-text p-0">10.00$</p>
+              <button class="add-btn text-center">
+                <img src="./Images/cart.png" class="me-3" alt="" /> Add
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 col-md-2 me-lg-4 me-0">
+          <div class="card">
+            <img src="./Images/catalog4.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title p-0">Clerical GOODS</h5>
+              <p class="card-text p-0">10.00$</p>
+              <button class="add-btn text-center">
+                <img src="./Images/cart.png" class="me-3" alt="" /> Add
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 col-md-2 me-lg-4 me-0">
+          <div class="card">
+            <img src="./Images/catalog5.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title p-0">Clerical GOODS</h5>
+              <p class="card-text p-0">10.00$</p>
+              <button class="add-btn text-center">
+                <img src="./Images/cart.png" class="me-3" alt="" /> Add
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 col-md-2 me-lg-4 me-0">
+          <div class="card">
+            <img src="./Images/catalog6.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title p-0">Clerical GOODS</h5>
+              <p class="card-text p-0">10.00$</p>
+              <button class="add-btn text-center">
+                <img src="./Images/cart.png" class="me-3" alt="" /> Add
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 col-md-2 me-lg-4 me-0">
+          <div class="card">
+            <img src="./Images/catalog7.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title p-0">Clerical GOODS</h5>
+              <p class="card-text p-0">10.00$</p>
+              <button class="add-btn text-center">
+                <img src="./Images/cart.png" class="me-3" alt="" /> Add
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 col-md-2 me-lg-4 me-0">
+          <div class="card">
+            <img src="./Images/catalog8.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title p-0">Clerical GOODS</h5>
+              <p class="card-text p-0">10.00$</p>
+              <button class="add-btn text-center">
+                <img src="./Images/cart.png" class="me-3" alt="" /> Add
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 col-md-2 me-lg-4 me-0">
+          <div class="card">
+            <img src="./Images/catalog9.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title p-0">Clerical GOODS</h5>
+              <p class="card-text p-0">10.00$</p>
+              <button class="add-btn text-center">
+                <img src="./Images/cart.png" class="me-3" alt="" /> Add
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 col-md-2 me-lg-4 me-0">
+          <div class="card">
+            <img src="./Images/catalog10.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title p-0">Clerical GOODS</h5>
+              <p class="card-text p-0">10.00$</p>
+              <button class="add-btn text-center">
+                <img src="./Images/cart.png" class="me-3" alt="" /> Add
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 col-md-2 me-lg-4 me-0">
+          <div class="card">
+            <img src="./Images/catalog11.png" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title p-0">Clerical GOODS</h5>
               <p class="card-text p-0">10.00$</p>
@@ -289,8 +398,100 @@
         </div>
       </div>
     </div>
-
     <!-- Catalog Ends -->
+
+    <!-- Deals Of The Week First section  -->
+    <div class="container my-4 my-lg-5 catalog">
+      <div class="row">
+        <h1>Deals Of The Week</h1>
+
+        <div class="col-12 deals-of-the-week1 col-md-2 me-lg-4">
+          <div class="card mx-auto">
+            <img
+              src="./Images/deals-of-the-week1.png"
+              class="card-img-top"
+              alt="..."
+            />
+          </div>
+        </div>
+        <div class="col-6 col-md-2 me-lg-4 me-0">
+          <div class="card">
+            <img
+              src="./Images/deals-of-the-week2.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title p-0">Clerical GOODS</h5>
+              <p class="card-text p-0">10.00$</p>
+              <button class="add-btn text-center">
+                <img src="./Images/cart.png" class="me-3" alt="" /> Add
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-6 col-md-2 me-lg-4 me-0">
+          <div class="card">
+            <img
+              src="./Images/deals-of-the-week3.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title p-0">Clerical GOODS</h5>
+              <p class="card-text p-0">10.00$</p>
+              <button class="add-btn text-center">
+                <img src="./Images/cart.png" class="me-3" alt="" /> Add
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Deals Of The Week First Section Ends -->
+
+    <!-- Deals Of The Week Second section  -->
+    <div class="container my-4 my-lg-5 catalog">
+      <div class="row">
+        <h1>Deals Of The Week</h1>
+
+        <div class="col-6 col-md-2 me-lg-4 me-0">
+          <div class="card">
+            <img
+              src="./Images/deals-of-the-week4.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title p-0">Clerical GOODS</h5>
+              <p class="card-text p-0">10.00$</p>
+              <button class="add-btn text-center">
+                <img src="./Images/cart.png" class="me-3" alt="" /> Add
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-6 col-md-2 me-lg-4 me-0">
+          <div class="card">
+            <img
+              src="./Images/deals-of-the-week5.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title p-0">Clerical GOODS</h5>
+              <p class="card-text p-0">10.00$</p>
+              <button class="add-btn text-center">
+                <img src="./Images/cart.png" class="me-3" alt="" /> Add
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Deals Of The Week Second Section Ends -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
