--- a/index.html
+++ b/index.html
@@ -492,6 +492,81 @@
       </div>
     </div>
     <!-- Deals Of The Week Second Section Ends -->
+
+    <!-- Image Overlay -->
+    <div class="container">
+      <div class="row">
+        <div class="col-12 img-overlay text-center pb-5 py-3">
+          <img src="./Images/letter.png" class="img-fluid" alt="" />
+          <h1 class="subscribe-for-the-news">SUBSCRIBE FOR THE NEWS</h1>
+          <p class="hurry-">
+            Receive news about new products, promotions, discounts, contests
+          </p>
+          <div
+            class="d-flex text-center justify-content-center align-items-center"
+          >
+            <input
+              type="text"
+              placeholder="Your Email Address"
+              class="form-control"
+            />
+            <button class="ms-3 text-center">Register</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Image Overlay Ends -->
+
+    <!-- Footer -->
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-6 col-lg-4 mt-5">
+          <img src="./Images/footer-logo.png" class="img-fluid mt-4" alt="" />
+        </div>
+        <div class="col-6 col-lg-2">
+          <ul class="list-group">
+            <li class="list-group-item">GOODS</li>
+            <li class="list-group-item mt-4">
+              Promotions and discounts on stationery
+            </li>
+            <li class="list-group-item">Novelties of the office</li>
+            <li class="list-group-item">Sales leaders</li>
+          </ul>
+        </div>
+        <div class="col-6 col-lg-2">
+          <ul class="list-group">
+            <li class="list-group-item">INFORMATION</li>
+            <li class="list-group-item mt-4">Payment and delivery</li>
+            <li class="list-group-item">User agreement</li>
+          </ul>
+        </div>
+        <div class="col-6 col-lg-2">
+          <ul class="list-group">
+            <li class="list-group-item">YOUR PROFILE</li>
+            <li class="list-group-item mt-4">Personal data</li>
+            <li class="list-group-item">order</li>
+            <li class="list-group-item">Addresses</li>
+            <li class="list-group-item">Coupons</li>
+          </ul>
+        </div>
+        <div class="col-6 col-lg-2 d-flex mt-5">
+          <img
+            src="./Images/play-store.png"
+            class="img-fluid play-store mt-4"
+            alt=""
+          />
+          <img
+            src="./Images/apple-store.png"
+            class="img-fluid play-store mt-4"
+            alt=""
+          />
+        </div>
+      </div>
+    </div>
+    <hr />
+    <div class="p-4"></div>
+    <!-- Footer Ends -->
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
