--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <!-- Banner  -->
     <div class="container-fluid">
       <div class="row mx-auto">
-        <div class="col-12 hero-sec mx-auto">
+        <div class="col-12 hero-sec ms-3">
           <h1 class="clerical">Clerical GOODS</h1>
           <p class="hurry-up">hurry up</p>
           <button class="read-more">Read More</button>
