--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <!-- Banner  -->
     <div class="container-fluid">
       <div class="row mx-auto">
-        <div class="col-12 hero-sec ms-3">
+        <div class="col-12 hero-sec">
           <h1 class="clerical">Clerical GOODS</h1>
           <p class="hurry-up">hurry up</p>
           <button class="read-more">Read More</button>
@@ -141,22 +141,62 @@
     <!-- Banner  Ends -->
 
     <!-- Menu -->
-    <div class="container-fluid mt-4">
+    <div class="container-fluid my-4">
       <div class="row mx-auto">
-        <div class="col-12 mx-auto">
+        <div class="col-12 mx-auto p-0">
           <div class="card-menu menu">
             <h1 class="my-4">Menu</h1>
             <div class="card-images">
-              <img src="./Images/menu1.png" class="img-fluid" alt="Image 1" />
-              <img src="./Images/menu2.png" class="img-fluid" alt="Image 2" />
-              <img src="./Images/menu3.png" class="img-fluid" alt="Image 3" />
-              <img src="./Images/menu4.png" class="img-fluid" alt="Image 4" />
-              <img src="./Images/menu5.png" class="img-fluid" alt="Image 5" />
-              <img src="./Images/menu6.png" class="img-fluid" alt="Image 6" />
-              <img src="./Images/menu7.png" class="img-fluid" alt="Image 7" />
-              <img src="./Images/menu8.png" class="img-fluid" alt="Image 8" />
-              <img src="./Images/menu9.png" class="img-fluid" alt="Image 9" />
-              <img src="./Images/menu10.png" class="img-fluid" alt="Image 10" />
+              <img
+                src="./Images/menu1.png"
+                class="img-fluid one"
+                alt="Image 1"
+              />
+              <img
+                src="./Images/menu2.png"
+                class="img-fluid two"
+                alt="Image 2"
+              />
+              <img
+                src="./Images/menu3.png"
+                class="img-fluid three"
+                alt="Image 3"
+              />
+              <img
+                src="./Images/menu4.png"
+                class="img-fluid four"
+                alt="Image 4"
+              />
+              <img
+                src="./Images/menu5.png"
+                class="img-fluid five"
+                alt="Image 5"
+              />
+              <img
+                src="./Images/menu6.png"
+                class="img-fluid six"
+                alt="Image 6"
+              />
+              <img
+                src="./Images/menu7.png"
+                class="img-fluid seven"
+                alt="Image 7"
+              />
+              <img
+                src="./Images/menu8.png"
+                class="img-fluid eight"
+                alt="Image 8"
+              />
+              <img
+                src="./Images/menu9.png"
+                class="img-fluid nine"
+                alt="Image 9"
+              />
+              <img
+                src="./Images/menu10.png"
+                class="img-fluid 10"
+                alt="Image ten"
+              />
             </div>
           </div>
         </div>
@@ -167,7 +207,7 @@
     <!-- Office and School  -->
     <div class="container-fluid mt-4">
       <div class="row mx-auto">
-        <div class="col-lg-6 office mb-3">
+        <div class="col-lg-6 office mb-3 p-0">
           <div>
             <button class="office-btn">OFFICE</button>
           </div>
@@ -192,10 +232,10 @@
     <!-- Office and School Ends -->
 
     <!-- Catalog  -->
-    <div class="container-fluid catalog">
+    <div class="container-fluid catalog my-4">
       <div class="row mx-auto">
         <h1>CATALOG</h1>
-        <div class="col-6 col-md-2">
+        <div class="col-6 col-md-2 p-0">
           <div class="card">
             <img src="./Images/catalog1.png" class="card-img-top" alt="..." />
             <div class="card-body">
@@ -207,7 +247,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-2 mx-auto">
+        <div class="col-6 col-md-2 p-0">
           <div class="card">
             <img src="./Images/catalog2.png" class="card-img-top" alt="..." />
             <div class="card-body">
@@ -219,7 +259,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-2 mx-auto">
+        <div class="col-6 col-md-2 p-0">
           <div class="card">
             <img src="./Images/catalog2.png" class="card-img-top" alt="..." />
             <div class="card-body">
@@ -231,7 +271,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-2 mx-auto">
+        <div class="col-6 col-md-2 p-0">
           <div class="card">
             <img src="./Images/catalog2.png" class="card-img-top" alt="..." />
             <div class="card-body">
@@ -243,7 +283,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-2 mx-auto">
+        <div class="col-6 col-md-2 p-0 d-flex justify-content-end mt-3 mt-xl-0">
           <div class="card">
             <img src="./Images/catalog5.png" class="card-img-top" alt="..." />
             <div class="card-body">
@@ -260,7 +300,7 @@
 
     <div class="container-fluid catalog">
       <div class="row mx-auto">
-        <div class="col-6 col-md-2">
+        <div class="col-6 col-md-2 p-0">
           <div class="card">
             <img src="./Images/catalog3.png" class="card-img-top" alt="..." />
             <div class="card-body">
@@ -272,7 +312,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-2 mx-auto">
+        <div class="col-6 col-md-2 p-0">
           <div class="card">
             <img src="./Images/catalog4.png" class="card-img-top" alt="..." />
             <div class="card-body">
@@ -284,7 +324,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-2 mx-auto">
+        <div class="col-6 col-md-2 p-0">
           <div class="card">
             <img src="./Images/catalog5.png" class="card-img-top" alt="..." />
             <div class="card-body">
@@ -296,7 +336,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-2 mx-auto">
+        <div class="col-6 col-md-2 p-0">
           <div class="card">
             <img src="./Images/catalog6.png" class="card-img-top" alt="..." />
             <div class="card-body">
@@ -308,7 +348,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-2 mx-auto">
+        <div class="col-6 col-md-2 p-0 d-flex justify-content-end mt-3 mt-xl-0">
           <div class="card">
             <img src="./Images/catalog7.png" class="card-img-top" alt="..." />
             <div class="card-body">
@@ -323,9 +363,9 @@
       </div>
     </div>
 
-    <div class="container-fluid catalog">
+    <div class="container-fluid catalog my-4">
       <div class="row mx-auto">
-        <div class="col-6 col-md-2">
+        <div class="col-6 col-md-2 p-0">
           <div class="card">
             <img src="./Images/catalog8.png" class="card-img-top" alt="..." />
             <div class="card-body">
@@ -337,7 +377,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-2 mx-auto">
+        <div class="col-6 col-md-2 p-0">
           <div class="card">
             <img src="./Images/catalog9.png" class="card-img-top" alt="..." />
             <div class="card-body">
@@ -349,7 +389,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-2 mx-auto">
+        <div class="col-6 col-md-2 p-0">
           <div class="card">
             <img src="./Images/catalog10.png" class="card-img-top" alt="..." />
             <div class="card-body">
@@ -361,7 +401,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-2 mx-auto">
+        <div class="col-6 col-md-2 p-0">
           <div class="card">
             <img src="./Images/catalog11.png" class="card-img-top" alt="..." />
             <div class="card-body">
@@ -373,9 +413,9 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-2 mx-auto">
+        <!-- <div class="col-6 col-md-2">
           <div class="card"></div>
-        </div>
+        </div> -->
       </div>
     </div>
     <!-- Catalog Ends -->
@@ -383,9 +423,9 @@
     <!-- Deals Of The Week First section  -->
     <div class="container-fluid my-4 my-lg-5 catalog">
       <div class="row mx-auto">
-        <h1>Deals Of The Week</h1>
+        <h1 class="p-0">Deals Of The Week</h1>
 
-        <div class="col-12 deals-of-the-week1 col-md-2">
+        <div class="col-12 deals-of-the-week1 col-md-2 my-3 my-md-0">
           <div class="card mx-auto">
             <img src="./Images/deals-of-the-week1.png" class="card-img-top" />
           </div>
@@ -468,7 +508,7 @@
     <!-- Image Overlay -->
     <div class="container-fluid">
       <div class="row mx-auto">
-        <div class="col-12 img-overlay text-center pb-5 py-3">
+        <div class="col-12 img-overlay px-0 text-center pb-5 py-3">
           <img src="./Images/letter.png" class="img-fluid" alt="" />
           <h1 class="subscribe-for-the-news">SUBSCRIBE FOR THE NEWS</h1>
           <p class="hurry-">
@@ -490,9 +530,9 @@
     <!-- Image Overlay Ends -->
 
     <!-- Footer -->
-    <div class="container mt-5">
-      <div class="row">
-        <div class="col-6 col-lg-4 mt-5">
+    <div class="container-fluid mt-5">
+      <div class="row mx-auto">
+        <div class="col-6 col-lg-4 mt-5 p-0">
           <img src="./Images/footer-logo.png" class="img-fluid mt-4" alt="" />
         </div>
         <div class="col-6 col-lg-2">
@@ -521,7 +561,7 @@
             <li class="list-group-item">Coupons</li>
           </ul>
         </div>
-        <div class="col-6 col-lg-2 d-flex mt-5">
+        <div class="col-6 col-lg-2 d-flex mt-5 p-0 justify-content-end">
           <img
             src="./Images/play-store.png"
             class="img-fluid play-store mt-4"
